[gd_scene load_steps=19 format=2]

[ext_resource path="res://040_Darkgod_Db.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Bars.gd" type="Script" id=4]
[ext_resource path="res://Logs.gd" type="Script" id=5]
[ext_resource path="res://Prototype.gd" type="Script" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.34902, 0.34902, 0.34902, 0.784314 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.968627, 1, 0, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.0784314, 1, 0, 1 )

[sub_resource type="GradientTexture" id=17]
gradient = SubResource( 16 )

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 1, 0.929412, 1 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.207843, 0.207843, 0.207843, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[node name="Prototype" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Bars" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sanity" type="TextureProgress" parent="HUD/Bars"]
margin_left = 29.4737
margin_top = 24.3158
margin_right = 370.474
margin_bottom = 46.3158
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 13 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Courage" type="TextureProgress" parent="HUD/Bars"]
margin_left = 29.4737
margin_top = 69.5789
margin_right = 370.474
margin_bottom = 91.5789
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 15 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Serenity" type="TextureProgress" parent="HUD/Bars"]
margin_left = 29.4737
margin_top = 119.053
margin_right = 370.474
margin_bottom = 141.053
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 17 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hope" type="TextureProgress" parent="HUD/Bars"]
margin_left = 29.4737
margin_top = 164.316
margin_right = 370.474
margin_bottom = 186.316
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 19 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logs" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/Logs"]
margin_left = 787.0
margin_top = 17.0
margin_right = 1005.0
margin_bottom = 348.0
texture = SubResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Logs"]
margin_left = 794.0
margin_top = 24.0
margin_right = 997.0
margin_bottom = 341.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arena" type="Node2D" parent="."]

[node name="Enemy" type="Node2D" parent="Arena"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Arena/Enemy"]
position = Vector2( 505.549, 310.7 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="ScaleTween" type="Tween" parent="Arena/Enemy/Sprite"]

[node name="Player" type="Node2D" parent="Arena"]
script = ExtResource( 3 )
[connection signal="use_move" from="Arena/Enemy" to="HUD/Logs" method="_on_Enemy_use_move"]
[connection signal="tween_completed" from="Arena/Enemy/Sprite/ScaleTween" to="Arena/Enemy" method="_on_ScaleTween_tween_completed"]
[connection signal="courage_changed" from="Arena/Player" to="HUD/Bars" method="_on_Player_courage_changed"]
[connection signal="hope_changed" from="Arena/Player" to="HUD/Bars" method="_on_Player_hope_changed"]
[connection signal="sanity_changed" from="Arena/Player" to="HUD/Bars" method="_on_Player_sanity_changed"]
[connection signal="serenity_changed" from="Arena/Player" to="HUD/Bars" method="_on_Player_serenity_changed"]
