[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/040_Darkgod_Db.png" type="Texture" id=1]
[ext_resource path="res://entities/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://ui/bars/EmotionBar.tscn" type="PackedScene" id=3]

[node name="Enemy" type="Node2D"]
position = Vector2( 196.842, -13.6842 )
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="EnemyBar" parent="HUD" instance=ExtResource( 3 )]
margin_left = 412.044
margin_top = 33.0
margin_right = -67.9559
margin_bottom = -537.0
label_text = "Enemy"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 505.549, 310.7 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="ScaleTween" type="Tween" parent="Sprite"]

[node name="DamageColorTween" type="Tween" parent="Sprite"]

[node name="TranslateTween" type="Tween" parent="Sprite"]

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true
[connection signal="tween_completed" from="Sprite/ScaleTween" to="." method="_on_ScaleTween_tween_completed"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
